// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Header ECL renders correctly 1`] = `
<header>
  <!-- header -->
  <div
    class="container"
  >
    <div
      class="oe-header"
    >
      <a
        class="navbar-brand"
        href="#"
      >
        <img
          height="60"
          src="https://ec.europa.eu/info/sites/info/themes/europa/images/svg/logo/logo--en.svg"
          width="240"
        />
      </a>
      <ul
        class="nav"
      >
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            data-bs-target="#loginModal"
            data-bs-toggle="modal"
            href="Log"
            in=""
            role="button"
          >
            
            Log in
          
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            data-bs-target="#languageModal"
            data-bs-toggle="modal"
            href="English"
            role="button"
          >
            
            English
          
          </a>
        </li>
      </ul>
    </div>
  </div>
  <!-- navbar -->
  <nav
    class="oe-navbar navbar navbar-dark navbar-expand-lg"
  >
    <div
      class="container"
    >
      <button
        aria-controls="navbarNavDropdown"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        data-bs-target="#navbarNavDropdown"
        data-bs-toggle="collapse"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbarNavDropdown"
      >
        <ul
          class="navbar-nav"
        >
          <li
            class="nav-item"
          >
            <a
              aria-current="page"
              class="nav-link active"
              href="#"
            >
              Home
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="#"
            >
              Item 01
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="#"
            >
              Item 02
            </a>
          </li>
          <li
            class="nav-item dropdown"
          >
            <a
              aria-expanded="false"
              class="nav-link dropdown-toggle"
              data-bs-toggle="dropdown"
              href="#"
              id="navbarDropdownMenuLink"
              role="button"
            >
              
            Dropdown link
          
            </a>
            <ul
              aria-labelledby="navbarDropdownMenuLink"
              class="dropdown-menu"
            >
              <li>
                <a
                  class="dropdown-item"
                  href="#"
                >
                  Action
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="#"
                >
                  Another action
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="#"
                >
                  Something else here
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</header>
`;

exports[`OE - Header renders correctly 1`] = `
<header>
  <!-- header -->
  <div
    class="container"
  >
    <div
      class="oe-header"
    >
      <a
        class="navbar-brand"
        href="#"
      >
        <img
          height="60"
          src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/638px-Placeholder_view_vector.svg.png"
          width="100"
        />
      </a>
      <ul
        class="nav"
      >
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            data-bs-target="#loginModal"
            data-bs-toggle="modal"
            href="Log"
            in=""
            role="button"
          >
            
            Log in
          
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            data-bs-target="#languageModal"
            data-bs-toggle="modal"
            href="English"
            role="button"
          >
            
            English
          
          </a>
        </li>
      </ul>
    </div>
  </div>
  <!-- navbar -->
  <nav
    class="oe-navbar navbar navbar-light navbar-expand-lg"
  >
    <div
      class="container"
    >
      <button
        aria-controls="navbarNavDropdown"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        data-bs-target="#navbarNavDropdown"
        data-bs-toggle="collapse"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbarNavDropdown"
      >
        <ul
          class="navbar-nav"
        >
          <li
            class="nav-item"
          >
            <a
              aria-current="page"
              class="nav-link active"
              href="#"
            >
              Home
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="#"
            >
              Item 01
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="#"
            >
              Item 02
            </a>
          </li>
          <li
            class="nav-item dropdown"
          >
            <a
              aria-expanded="false"
              class="nav-link dropdown-toggle"
              data-bs-toggle="dropdown"
              href="#"
              id="navbarDropdownMenuLink"
              role="button"
            >
              
            Dropdown link
          
            </a>
            <ul
              aria-labelledby="navbarDropdownMenuLink"
              class="dropdown-menu"
            >
              <li>
                <a
                  class="dropdown-item"
                  href="#"
                >
                  Action
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="#"
                >
                  Another action
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="#"
                >
                  Something else here
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</header>
`;
